--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,33 @@
-<div class="container spacer">
-  <button routerLink="/themes" class="btn btn-primary">
-    Themes
-  </button>&nbsp;
-  <button routerLink="/addTheme" class="btn btn-primary">
-    Add Theme
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg sticky-top">
+  <a href="#" class="navbar-brand">E-Forum</a>
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+    <span class="navbar-toggler-icon"></span>
   </button>
-</div>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li clas="navbar-item">
+        <a href="#" routerLink="/themes" class="nav-link">Accueil</a>
+      </li>
+      
+      <li clas="navbar-item">
+        <a href="#" routerLink="/themes" class="nav-link">About</a>
+      </li>
+      <li clas="navbar-item">
+        <a href="#" routerLink="/themes" class="nav-link">Contact</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li clas="navbar-item">
+        <a href="#" routerLink="/themes" class="nav-link">login</a>
+      </li>
+      
+     
+    </ul>
+  </div>
+</nav>
+
+
 
 <div class="container spacer">
   <router-outlet></router-outlet>
 </div>
-
