--- a/src/app/listthemecomponent/theme/theme.component.html
+++ b/src/app/listthemecomponent/theme/theme.component.html
@@ -4,6 +4,7 @@
 <td>{{Theme.moderateur}}</td>
 <td>{{Theme.forum}}</td>
 <td>
-    <button class="btn btn-primary" (click)="choisirTheme()">Details</button>
+    <button class="btn btn-primary" (click)="choisirTheme()">Editer</button>&nbsp;
+    <button class="btn btn-primary" (click)="getPosts()">Posts</button>
 </td>
       
