--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,80 @@
-<nav class="navbar navbar-light bg-light navbar-expand-lg sticky-top">
-  <a href="#" class="navbar-brand">E-Forum</a>
-  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li clas="navbar-item">
-        <a href="#" routerLink="/themes" class="nav-link">Accueil</a>
-      </li>
-      <li clas="navbar-item">
-        <a href="#" routerLink="/themes" class="nav-link">Themes</a>
-      </li>
-      <li clas="navbar-item">
-        <a href="#" routerLink="/themes" class="nav-link">About</a>
-      </li>
-      <li clas="navbar-item">
-        <a href="#" routerLink="/themes" class="nav-link">Contact</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto ">
-      <li clas="navbar-item">
-        <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Login</button>
-      </li>
-      &nbsp;
-      <li clas="navbar-item">
-        <button class="btn btn-primary" mat-button (click)="openRegisterDialog()" >Inscription</button>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/accueil" >{{title}}</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <em class="fas fa-bars"></em>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a href="#" routerLink="/accueil" class="nav-link">Accueil</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" routerLink="/themes" class="nav-link">Themes</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" routerLink="/themes" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" routerLink="/themes" class="nav-link">Contact</a>
+        </li>
+      </ul>
+      
+      <ul class="navbar-nav ml-auto ">
+        <li clas="navbar-item">
+          <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Login</button>
+        </li>
+        &nbsp;
+        <li clas="navbar-item">
+          <button class="btn btn-primary" mat-button (click)="openRegisterDialog()" >Inscription</button>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
 
+<!-- Main Content -->
 
-<div class="container spacer">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
+
+
+<hr>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fas fa-circle fa-stack-2x"></em>
+                  <em class="fab fa-linkedin fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fas fa-circle fa-stack-2x"></em>
+                  <em class="fab fa-facebook-f fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fas fa-circle fa-stack-2x"></em>
+                  <em class="fab fa-github fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright text-muted">Copyright &copy; E-Forum {{currentYear}}</p>
+        </div>
+      </div>
+    </div>
+  </footer>
