--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,53 @@
-.mt-50{
-    margin-top: 50px;
-}
-.masthead {
+.post-preview > a {
+    color: #212529;
+  }
+  
+  .post-preview > a:focus, .post-preview > a:hover {
+    text-decoration: none;
+    color: #0085A1;
+  }
+  
+  .post-preview > a > .post-title {
+    font-size: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+  
+  .post-preview > a > .post-subtitle {
+    font-weight: 300;
+    margin: 0 0 10px;
+  }
+  
+  .post-preview > .post-meta {
+    font-size: 18px;
+    font-style: italic;
+    margin-top: 0;
+    color: #868e96;
+  }
+  
+  .post-preview > .post-meta > a {
+    text-decoration: none;
+    color: #212529;
+  }
+  
+  .post-preview > .post-meta > a:focus, .post-preview > .post-meta > a:hover {
+    text-decoration: underline;
+    color: #0085A1;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .post-preview > a > .post-title {
+      font-size: 36px;
+    }
+  }
+
+  .masthead {
     margin-bottom: 50px;
     background: no-repeat center center;
-    background-color: #868e96;
+    background-image: url('../../images/home-bg.jpg') ;
+    background-size: cover;
     background-attachment: scroll;
     position: relative;
-    background-size: cover;
   }
   
   .masthead .overlay {
@@ -66,35 +106,36 @@
     font-size: 35px;
   }
   
-  headermasthead .post-heading .meta,
-  .masthead .post-heading .subheading {
+  header.masthead .post-heading .meta,
+  header.masthead .post-heading .subheading {
     line-height: 1.1;
     display: block;
   }
   
-  .masthead .post-heading .subheading {
+  header.masthead .post-heading .subheading {
     font-size: 24px;
     font-weight: 600;
     margin: 10px 0 30px;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   
-  .masthead .post-heading .meta {
+  header.masthead .post-heading .meta {
     font-size: 20px;
     font-weight: 300;
     font-style: italic;
     font-family: 'Lora', 'Times New Roman', serif;
   }
   
-  .masthead .post-heading .meta a {
+  header.masthead .post-heading .meta a {
     color: #fff;
   }
   
   @media only screen and (min-width: 768px) {
-    .masthead .post-heading h1 {
+    header.masthead .post-heading h1 {
       font-size: 55px;
     }
-    .masthead .post-heading .subheading {
+    header.masthead .post-heading .subheading {
       font-size: 30px;
     }
   }
+  
