--- a/src/app/listthemecomponent/form-theme/form-theme.component.html
+++ b/src/app/listthemecomponent/form-theme/form-theme.component.html
@@ -1,35 +1,63 @@
-<div class="container mt-50">
-    <div class="card ">
-        <div class="card-header bg-dark text-light">
-            {{formTitle}}
-        </div>
-        <div class="card-body">
-            <form #form="ngForm" (ngSubmit)="submitTheme(form.value)">
-                <div class="form-group">
-                    <label>Titre</label>
-                    <input  class="form-control"  type="text" placeholder="Titre" name="titre"
-                        [(ngModel)]="Theme.titre" required [disabled]="Theme.titre"/>
-                    
+<!-- Page Header -->
+<section class="masthead" style="background-image: url('../assets/images/home-bg.jpg') ; background-size: cover;">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-10 mx-auto">
+                <div class="site-heading">
+                    <h1>AJOUTER UN THEME</h1>
+                    <hr/>
+                    <span class="subheading">Formulaire d'ajout d'un thème</span>
                 </div>
-                <div class="form-group">
-                    <label>Description</label>
-                    <input class="form-control" type="text" placeholder="Description" name="description"
-                        [(ngModel)]="Theme.description" required />
-                </div>
-                <div class="form-group">
-                    <label>Moderateur</label>
-                    <input class="form-control" type="text" name="moderateur" [(ngModel)]="Theme.moderateur" required />
-                </div>
-                <div class="form-group">
-                    <label>Forum</label>
-                    <input class="form-control" type="text" name="forum" [(ngModel)]="Theme.forum" required />
-                </div>
-                <button type="submit" class="btn btn-primary" [disabled]="!form.valid" style="float: right;">
-                    {{btnType}}
-                </button>
-            </form>
+            </div>
         </div>
     </div>
-    &nbsp;
+</section>
+<div class="container mt-50">
+    <div class="row">
+        <div class="col-lg-12 col-md-10 mx-auto">
+            <div class="container mt-50">
+                <div class="card ">
+                    <div class="card-header bg-dark text-light">
+                        {{formTitle}}
+                    </div>
+                    <div class="card-body">
+                        <form #form="ngForm" (ngSubmit)="submitTheme(form.value)">
+                            <div class="form-group">
+                                <label>Titre</label>
+                                <input class="form-control" type="text" placeholder="Titre" name="titre"
+                                    [(ngModel)]="Theme.titre" required [disabled]="Theme.titre" />
 
+                            </div>
+                            <div class="form-group">
+                                <label>Description</label>
+                                <input class="form-control" type="text" placeholder="Description" name="description"
+                                    [(ngModel)]="Theme.description" required />
+                            </div>
+                            <div class="form-group">
+                                <label>Moderateur</label>
+                                <select class="form-control" type="text" name="moderateur"
+                                    [(ngModel)]="Theme.moderateur" required>
+                                    <option value="Default" disabled>Choisir un modérateur</option>
+                                    <option *ngFor="let m of Moderators" [value]="m._id">{{m.nom + " "+ m.prenom}}
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label>Forum</label>
+                                <input class="form-control" type="text" name="forum" [(ngModel)]="Theme.forum"
+                                    required />
+                            </div>
+                            <button type="submit" class="btn btn-primary" [disabled]="!form.valid"
+                                style="float: right;">
+                                {{btnType}}
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                &nbsp;
+
+            </div>
+        </div>
+    </div>
 </div>
