--- a/src/app/listthemecomponent/listthemecomponent.component.html
+++ b/src/app/listthemecomponent/listthemecomponent.component.html
@@ -1,44 +1,66 @@
-<div class="mt-50">
-  <div class="card ">
-    <div class="card-header bg-dark text-light">
-      Liste des Thèmes
-    </div>
-    <div class="card-body">
-      <div class="d-flex justify-content-between">
-        <form #form="ngForm" (ngSubmit)="chercherParMotCle(form.value)">
-          <div class="form-group">
-            <input type="text" name="keyword" [(ngModel)]="keyword" /> &nbsp;
-            <input class="btn btn-primary" type="submit" value="Chercher" [disabled]="!keyword" />
-    
-          </div>
-        </form>
-        <button class="btn btn-primary" routerLink="/addTheme">
-          Nouveau Thème
-        </button>
+<!-- Page Header -->
+<section class="masthead">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-10 mx-auto">
+        <div class="site-heading">
+          <h1>THEMES</h1>
+          <hr/>
+          <span class="subheading">Liste des thèmes</span>
+        </div>
       </div>
-    
-      &nbsp;
-      <table class="table  table-striped table-bordered " *ngIf="Themes; else elseThemes">
-        <caption>Liste des Thémes</caption>
-        <thead>
-          <tr>
-            <th scope="col">Titre</th>
-            <th scope="col">Description</th>
-            <th scope="col">Moderateur</th>
-            <th scope="col">Forum</th>
-            <th scope="col">Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let t of Themes; let i = index" app-theme [Theme]="t">
-          </tr>
-        </tbody>
-      </table>
-      <ng-template #elseThemes>
-        <h2 class="container  d-flex justify-content-center">
-          Aucun résultat
-        </h2>
-      </ng-template>
+    </div>
+  </div>
+</section>
+<div class="container mt-50">
+  <div class="row">
+    <div class="col-lg-12 col-md-10 mx-auto">
+      
+
+        <div class="card ">
+          <div class="card-header bg-dark text-light">
+            Liste des Thèmes
+          </div>
+          <div class="card-body">
+            <div class="d-flex justify-content-between">
+              <form #form="ngForm" (ngSubmit)="chercherParMotCle(form.value)">
+                <div class="form-group">
+                  <input type="text" name="keyword" [(ngModel)]="keyword" /> &nbsp;
+                  <input class="btn btn-primary" type="submit" value="Chercher" [disabled]="!keyword" />
+
+                </div>
+              </form>
+              <button class="btn btn-primary" routerLink="/addTheme">
+                Nouveau Thème
+              </button>
+            </div>
+
+            &nbsp;
+            <table class="table  table-striped table-bordered " *ngIf="Themes; else elseThemes">
+              <caption>Liste des Thémes</caption>
+              <thead>
+                <tr>
+                  <th scope="col">Titre</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">Moderateur</th>
+                  <th scope="col">Forum</th>
+                  <th scope="col">Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let t of Themes; let i = index" app-theme [Theme]="t">
+                </tr>
+              </tbody>
+            </table>
+            <ng-template #elseThemes>
+              <h2 class="container  d-flex justify-content-center">
+                Aucun résultat
+              </h2>
+            </ng-template>
+          </div>
+        
+      </div>
     </div>
   </div>
 </div>
