--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-  <div class="container">
+  <div class="container align-items-center">
     <a class="navbar-brand" routerLink="/accueil" >{{title}}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
@@ -23,11 +23,11 @@
       
       <ul class="navbar-nav ml-auto ">
         <li clas="navbar-item">
-          <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Login</button>
+          <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Se connecter</button>
         </li>
         &nbsp;
         <li clas="navbar-item">
-          <button class="btn btn-primary" mat-button (click)="openRegisterDialog()" >Inscription</button>
+          <button class="btn btn-primary" mat-button (click)="openRegisterDialog()" >S'inscrire</button>
         </li>
       </ul>
     </div>
