--- a/src/app/listthemecomponent/form-theme/form-theme.component.css
+++ b/src/app/listthemecomponent/form-theme/form-theme.component.css
@@ -4,7 +4,7 @@
 .masthead {
     margin-bottom: 50px;
     background: no-repeat center center;
-    background-color: #868e96;
+    background-image: url('../../../images/home-bg.jpg');
     background-attachment: scroll;
     position: relative;
     background-size: cover;
