--- a/src/app/listthemecomponent/theme/theme.component.html
+++ b/src/app/listthemecomponent/theme/theme.component.html
@@ -1,10 +1,20 @@
+<td>
+    <div class="theme-preview" (click)="linkToPosts()">
+            <div class="theme-title">
+                {{Theme.titre}}
+            </div>
+            
+        </div>
+    <div class="theme-subtitle">
+        {{Theme.description}}
+    </div>
 
-<td>{{Theme.titre}}</td>
-<td>{{Theme.description}}</td>
-<td>{{Theme.moderateur}}</td>
-<td>{{Theme.forum}}</td>
+</td>
+<td class="moderateur">
+    <em class="fa fa-user-circle fa-lg "></em>&nbsp;{{moderator.nom + " " + moderator.prenom}}
+</td>
+<td><em class="fa fa-comments fa-lg "></em>&nbsp;{{posts.length}}</td>
 <td>
     <button class="btn btn-primary" (click)="choisirTheme()">Editer</button>&nbsp;
-    <button class="btn btn-primary" (click)="getPosts()">Posts</button>
+    
 </td>
-      
