--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,141 +1,9 @@
-.post-preview > a {
-    color: #212529;
-  }
-  
-  .post-preview > a:focus, .post-preview > a:hover {
-    text-decoration: none;
-    color: #0085A1;
-  }
-  
-  .post-preview > a > .post-title {
-    font-size: 30px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-  }
-  
-  .post-preview > a > .post-subtitle {
-    font-weight: 300;
-    margin: 0 0 10px;
-  }
-  
-  .post-preview > .post-meta {
-    font-size: 18px;
-    font-style: italic;
-    margin-top: 0;
-    color: #868e96;
-  }
-  
-  .post-preview > .post-meta > a {
-    text-decoration: none;
-    color: #212529;
-  }
-  
-  .post-preview > .post-meta > a:focus, .post-preview > .post-meta > a:hover {
-    text-decoration: underline;
-    color: #0085A1;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .post-preview > a > .post-title {
-      font-size: 36px;
-    }
-  }
-
-  .masthead {
-    margin-bottom: 50px;
-    background: no-repeat center center;
-    background-image: url('../../images/home-bg.jpg') ;
-    background-size: cover;
-    background-attachment: scroll;
-    position: relative;
-  }
-  
-  .masthead .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #212529;
-    opacity: 0.5;
-  }
-  
-  .masthead .page-heading,
-  .masthead .post-heading,
-  .masthead .site-heading {
-    padding: 200px 0 150px;
-    color: white;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .masthead .page-heading,
-    .masthead .post-heading,
-    .masthead .site-heading {
-      padding: 200px 0;
-    }
-  }
-  
-  .masthead .page-heading,
-  .masthead .site-heading {
-    text-align: center;
-  }
-  
-  .masthead .page-heading h1,
-  .masthead .site-heading h1 {
-    font-size: 50px;
-    margin-top: 0;
-  }
-  
-  .masthead .page-heading .subheading,
-  .masthead .site-heading .subheading {
-    font-size: 24px;
-    line-height: 1.1;
-    display: block;
-    margin: 10px 0 0;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .masthead .page-heading h1,
-    .masthead .site-heading h1 {
-      font-size: 80px;
-    }
-  }
-  
-  .masthead .post-heading h1 {
-    font-size: 35px;
-  }
-  
-  header.masthead .post-heading .meta,
-  header.masthead .post-heading .subheading {
-    line-height: 1.1;
-    display: block;
-  }
-  
-  header.masthead .post-heading .subheading {
-    font-size: 24px;
-    font-weight: 600;
-    margin: 10px 0 30px;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  }
-  
-  header.masthead .post-heading .meta {
-    font-size: 20px;
-    font-weight: 300;
-    font-style: italic;
-    font-family: 'Lora', 'Times New Roman', serif;
-  }
-  
-  header.masthead .post-heading .meta a {
-    color: #fff;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    header.masthead .post-heading h1 {
-      font-size: 55px;
-    }
-    header.masthead .post-heading .subheading {
-      font-size: 30px;
-    }
-  }
-  
+.card{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.title{
+  font-size: 30px;
+}
+.fa{
+  color: #00657B;
+}
