--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,10 @@
                     <h1>E-Forum</h1>
                     <hr/>
                     <span class="subheading">Forum de descussion par Excellence</span>
+                    <br/>
+                    <div class="d-flex justify-content-center ml-auto ">
+                          <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Contribuer</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -16,19 +20,42 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-10 mx-auto">
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Man must explore, and this is exploration at its greatest
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Problems look mighty small from 150 miles up
-                    </h3>
-                </a>
-                <p class="post-meta">Posted by
-                    <a href="#">Start Bootstrap</a>
-                    on September 24, 2019
-                </p>
+            <h1 class="d-flex justify-content-center title">Services</h1>
+            &nbsp;
+            <div class="row">
+                <div class="col-lg-4 col-sm-12">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <p>
+                                lorem lorem lorem,lorem lorem lorem,
+                                lorem lorem lorem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <p>
+                                lorem lorem lorem,lorem lorem lorem,
+                                lorem lorem lorem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <p>
+                                lorem lorem lorem,lorem lorem lorem,
+                                lorem lorem lorem
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
