--- a/src/app/listthemecomponent/listthemecomponent.component.html
+++ b/src/app/listthemecomponent/listthemecomponent.component.html
@@ -6,61 +6,69 @@
       <div class="col-lg-12 col-md-10 mx-auto">
         <div class="site-heading">
           <h1>THEMES</h1>
-          <hr/>
+          <hr />
           <span class="subheading">Liste des thèmes</span>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="container mt-50">
+<section class="container d-flex align-items-center">
+  <div class="path" (click) = "goHome()"><em class="fa fa-home"></em>&nbsp;Accueil</div>&nbsp;
+  <em class="fa fa-angle-right"></em>&nbsp;
+  <div>Thèmes</div>
+</section>
+<div class="container mt-10">
   <div class="row">
     <div class="col-lg-12 col-md-10 mx-auto">
-      
-
-        <div class="card ">
-          <div class="card-header bg-dark text-light">
-            Liste des Thèmes
+          <div class="d-flex justify-content-end">
+           
+            <button class="btn btn-primary" routerLink="/addTheme">
+              + Nouveau Thème
+            </button>
           </div>
-          <div class="card-body">
-            <div class="d-flex justify-content-between">
-              <form #form="ngForm" (ngSubmit)="chercherParMotCle(form.value)">
-                <div class="form-group">
-                  <input type="text" name="keyword" [(ngModel)]="keyword" /> &nbsp;
-                  <input class="btn btn-primary" type="submit" value="Chercher" [disabled]="!keyword" />
-
-                </div>
-              </form>
-              <button class="btn btn-primary" routerLink="/addTheme">
-                Nouveau Thème
-              </button>
-            </div>
-
-            &nbsp;
-            <table class="table  table-striped table-bordered " *ngIf="Themes; else elseThemes">
+          &nbsp;
+            <table  class="table  table-striped  tables" *ngIf="Themes; else elseThemes">
               <caption>Liste des Thémes</caption>
               <thead>
                 <tr>
-                  <th scope="col">Titre</th>
-                  <th scope="col">Description</th>
-                  <th scope="col">Moderateur</th>
-                  <th scope="col">Forum</th>
+                  <th scope="col">Thème</th>
+                  <th scope="col">Modérateur</th>
+                  <th scope="col">Total des posts</th>
                   <th scope="col">Actions</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody class="theme-preview">
                 <tr *ngFor="let t of Themes; let i = index" app-theme [Theme]="t">
                 </tr>
               </tbody>
             </table>
             <ng-template #elseThemes>
-              <h2 class="container  d-flex justify-content-center">
-                Aucun résultat
-              </h2>
+              <table class="table  table-striped ">
+                <caption>Liste des Thémes</caption>
+                <thead>
+                  <tr>
+                    <th scope="col">Thème</th>
+                    <th scope="col">Modérateur</th>
+                    <th scope="col">Total des posts</th>
+                    <th scope="col">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr >
+                    <td colspan="4">
+                      <h2 class="container  d-flex justify-content-center">
+                        Aucun résultat
+                      </h2>
+                    </td>
+  
+                  </tr>
+                </tbody>
+              </table>
+  
             </ng-template>
-          </div>
-        
-      </div>
+          
+
     </div>
   </div>
 </div>
