--- a/src/app/posts/form-post/form-post.component.html
+++ b/src/app/posts/form-post/form-post.component.html
@@ -5,9 +5,9 @@
         <div class="row">
             <div class="col-lg-12 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>AJOUTER UN THEME</h1>
+                    <h1>AJOUTER UNE PUBLICATION</h1>
                     <hr/>
-                    <span class="subheading">Formulaire d'ajout d'un thème</span>
+                    <span class="subheading">Formulaire d'ajout d'une publication</span>
                 </div>
             </div>
         </div>
@@ -17,6 +17,9 @@
     <div class="path" (click)="goHome()"><em class="fa fa-home"></em>&nbsp;Accueil</div>&nbsp;
     <em class="fa fa-angle-right"></em>&nbsp;
     <div class="path" (click)="goThemes()">Thèmes</div>&nbsp;
+    <em class="fa fa-angle-right"></em>&nbsp;
+    <div class="path" (click)="goPosts()">Posts</div>
+    &nbsp;
     <em class="fa fa-angle-right"></em>&nbsp;
     <div>Formulaire</div>
 </section>
@@ -29,31 +32,20 @@
                         {{formTitle}}
                     </div>
                     <div class="card-body">
-                        <form #form="ngForm" (ngSubmit)="submitTheme(form.value)">
+                        <form #form="ngForm" (ngSubmit)="submitPost()">
                             <div class="form-group">
                                 <label>Titre</label>
                                 <input class="form-control" type="text" placeholder="Titre" name="titre"
-                                    [(ngModel)]="Theme.titre" required [disabled]="Theme.titre" />
+                                    [(ngModel)]="Post.titre" required />
 
                             </div>
                             <div class="form-group">
-                                <label>Description</label>
-                                <input class="form-control" type="text" placeholder="Description" name="description"
-                                    [(ngModel)]="Theme.description" required />
+                                <label>Message</label>
+                                <textarea class="form-control"  placeholder="Message" name="Message"
+                                    [(ngModel)]="Post.message" required ></textarea>
                             </div>
-                            <div class="form-group">
-                                <label>Moderateur</label>
-                                <select class="form-control" name="moderateur"
-                                    [(ngModel)]="Theme.moderateur" required>
-                                    <option value=""  disabled selected>Choisir un modérateur</option>
-                                    <option *ngFor="let m of Moderators" [value]="m._id">{{m.nom + " "+ m.prenom}}</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label>Forum</label>
-                                <input class="form-control" type="text" name="forum" [(ngModel)]="Theme.forum"
-                                    required />
-                            </div>
+                            
+                            
                             <button type="submit" class="btn btn-primary" [disabled]="!form.valid"
                                 style="float: right;">
                                 {{btnType}}
