--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,62 +1,73 @@
 <!-- Page Header -->
 <section class="masthead">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-md-10 mx-auto">
-                <div class="site-heading">
-                    <h1>POSTS</h1>
-                    <hr />
-                    <span class="subheading">Liste des posts</span>
-                </div>
-            </div>
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-10 mx-auto">
+        <div class="site-heading">
+          <h1>PUBLICATIONS</h1>
+          <hr />
+          <span class="subheading">Liste des publications</span>
         </div>
+      </div>
     </div>
+  </div>
+</section>
+<section class="container d-flex align-items-center">
+  <div class="path" (click)="goHome()"><em class="fa fa-home"></em>&nbsp;Accueil</div>&nbsp;
+  <em class="fa fa-angle-right"></em>&nbsp;
+  <div class="path" (click)="goThemes()">Thèmes</div>&nbsp;
+  <em class="fa fa-angle-right"></em>&nbsp;
+  <div>Posts</div>
 </section>
 <div class="container mt-50">
-    <div class="row">
-        <div class="col-lg-12 col-md-10 mx-auto">
-            <table class="table  table-striped table-bordered " *ngIf="posts.length > 0; else elsePosts">
-                <caption>Liste des Publications</caption>
-                <thead>
-                  <tr>
-                    <th scope="col">Autheur</th>
-                    <th scope="col">Titre</th>
-                    <th scope="col">Message</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let p of posts; let i = index">
-                    <td *ngFor="let u of getUser(p.user)">
-                        {{u.nom + " " + u.prenom}}
-                    </td>
-                    <td>{{p.titre}}</td>
-                    <td>{{p.message}}</td>
-                  </tr>
-                </tbody>
-              </table>
-              <ng-template #elsePosts>
-                <table class="table  table-striped table-bordered " >
-                    <caption>Liste des Publications</caption>
-                    <thead>
-                      <tr>
-                        <th scope="col">Autheur</th>
-                        <th scope="col">Titre</th>
-                        <th scope="col">Message</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td colspan="3">
-                            <h2 class="container  d-flex justify-content-center">
-                                Aucun résultat
-                            </h2>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                
-              </ng-template>
-        </div>
+  <div class="row">
+    <div class="col-lg-12 col-md-10 mx-auto">
+      <div class="d-flex justify-content-end">
+           
+        <button class="btn btn-primary" (click) = "NewPost()">
+          + Nouvelle Publication
+        </button>
+      </div>
+      &nbsp;
+      <table class="table  table-striped " *ngIf="posts.length > 0; else elsePosts">
+        <caption>Liste des Publications</caption>
+        <thead>
+          <tr>
+            <th scope="col">Publications</th>
+            <th scope="col">Réponses</th>
+            <th scope="col">Auteur</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let p of posts; let i = index" app-post [post]="p">
+          </tr>
+        </tbody>
+      </table>
+      <ng-template #elsePosts>
+        <table class="table  table-striped table-bordered ">
+          <caption>Liste des Publications</caption>
+          <thead>
+            <tr>
+              <th scope="col">Publications</th>
+              <th scope="col">Réponses</th>
+              <th scope="col">Auteur</th>
+
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td colspan="3">
+                <h2 class="container  d-flex justify-content-center">
+                  Aucun résultat
+                </h2>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </ng-template>
     </div>
+  </div>
 </div>
