--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,131 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%;}
 body { margin: 0;  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
+.table{
+  border: 1px solid #DEDEDF;
+  
+}
+.btn {
+    font-size: 14px;
+    font-weight: 800;
+    padding: 15px 25px;
+    letter-spacing: 1px;
+    border-radius: 0;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  
+  .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+    color: #fff;
+    background-color: #00657b !important;
+    border-color: #00657b !important;
+  }
+  
+  .link{
+    color: #0085A1;
+    text-transform: uppercase;
+  }
+  .path{
+    color: #0085A1;
+  }
+  .link:hover, .path:hover{
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .masthead {
+    margin-bottom: 50px;
+    background: no-repeat center center;
+    background-image: url('images/home-bg.jpg') ;
+    background-size: cover;
+    background-attachment: scroll;
+    position: relative;
+  }
+  
+  .masthead .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #212529;
+    opacity: 0.5;
+  }
+  
+  .masthead .page-heading,
+  .masthead .post-heading,
+  .masthead .site-heading {
+    padding: 200px 0 150px;
+    color: white;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .masthead .page-heading,
+    .masthead .post-heading,
+    .masthead .site-heading {
+      padding: 200px 0;
+    }
+  }
+  
+  .masthead .page-heading,
+  .masthead .site-heading {
+    text-align: center;
+  }
+  
+  .masthead .page-heading h1,
+  .masthead .site-heading h1 {
+    font-size: 50px;
+    margin-top: 0;
+  }
+  
+  .masthead .page-heading .subheading,
+  .masthead .site-heading .subheading {
+    font-size: 24px;
+    line-height: 1.1;
+    display: block;
+    margin: 10px 0 0;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .masthead .page-heading h1,
+    .masthead .site-heading h1 {
+      font-size: 80px;
+    }
+  }
+  
+  .masthead .post-heading h1 {
+    font-size: 35px;
+  }
+  
+  header.masthead .post-heading .meta,
+  header.masthead .post-heading .subheading {
+    line-height: 1.1;
+    display: block;
+  }
+  
+  header.masthead .post-heading .subheading {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 10px 0 30px;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  
+  header.masthead .post-heading .meta {
+    font-size: 20px;
+    font-weight: 300;
+    font-style: italic;
+    font-family: 'Lora', 'Times New Roman', serif;
+  }
+  
+  header.masthead .post-heading .meta a {
+    color: #fff;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    header.masthead .post-heading h1 {
+      font-size: 55px;
+    }
+    header.masthead .post-heading .subheading {
+      font-size: 30px;
+    }
+  }
