--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                 <div class="site-heading">
                     <h1>E-Forum</h1>
                     <hr/>
-                    <span class="subheading">Forum de descussion par Excellence</span>
+                    <span class="subheading">Forum de discussion par Excellence</span>
                     <br/>
                     <div class="d-flex justify-content-center ml-auto ">
                           <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Contribuer</button>
@@ -26,7 +26,20 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card">
                         <div class="card-body text-center">
-                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <h1 ><em class="fa fa-pencil-square-o fa-lg"></em></h1>
+                            <h1>Ajout de publications</h1>
+                            <p>
+                                lorem lorem lorem,lorem lorem lorem,
+                                lorem lorem lorem
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h1 ><em class="fa fa-comments-o fa-lg"></em></h1>
+                            <h1>Ajout de commentaires</h1>
                             <p>
                                 lorem lorem lorem,lorem lorem lorem,
                                 lorem lorem lorem
@@ -38,17 +51,7 @@
                     <div class="card">
                         <div class="card-body text-center">
                             <h1 ><em class="fa fa-home fa-lg"></em></h1>
-                            <p>
-                                lorem lorem lorem,lorem lorem lorem,
-                                lorem lorem lorem
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-12">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <h1>Discussion ouvert</h1>
                             <p>
                                 lorem lorem lorem,lorem lorem lorem,
                                 lorem lorem lorem
