--- a/src/app/listthemecomponent/listthemecomponent.component.html
+++ b/src/app/listthemecomponent/listthemecomponent.component.html
@@ -34,7 +34,7 @@
                 <tr>
                   <th scope="col">Thème</th>
                   <th scope="col">Modérateur</th>
-                  <th scope="col">Total des posts</th>
+                  <th scope="col">Total des publications</th>
                   <th scope="col">Actions</th>
                 </tr>
               </thead>
@@ -50,7 +50,7 @@
                   <tr>
                     <th scope="col">Thème</th>
                     <th scope="col">Modérateur</th>
-                    <th scope="col">Total des posts</th>
+                    <th scope="col">Total des publications</th>
                     <th scope="col">Actions</th>
                   </tr>
                 </thead>
