--- a/src/app/listthemecomponent/theme/theme.component.html
+++ b/src/app/listthemecomponent/theme/theme.component.html
@@ -5,8 +5,8 @@
             </div>
             
         </div>
-    <div class="theme-subtitle">
-        {{Theme.description}}
+    <div class="theme-subtitle" [innerHTML] = "Theme.description">
+        
     </div>
 
 </td>
