--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" routerLink="/accueil" >{{title}}</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
-        <em class="fas fa-bars"></em>
+        <em class="fa fa-bars"></em>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mr-auto">
@@ -52,24 +52,24 @@
               <li class="list-inline-item">
                 <a href="#">
                   <span class="fa-stack fa-lg">
-                    <em class="fas fa-circle fa-stack-2x"></em>
-                    <em class="fab fa-linkedin fa-stack-1x fa-inverse"></em>
+                    <em class="fa fa-circle fa-stack-2x"></em>
+                    <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
                   <span class="fa-stack fa-lg">
-                    <em class="fas fa-circle fa-stack-2x"></em>
-                    <em class="fab fa-facebook-f fa-stack-1x fa-inverse"></em>
+                    <em class="fa fa-circle fa-stack-2x"></em>
+                    <em class="fa fa-facebook-f fa-stack-1x fa-inverse"></em>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
                   <span class="fa-stack fa-lg">
-                    <em class="fas fa-circle fa-stack-2x"></em>
-                    <em class="fab fa-github fa-stack-1x fa-inverse"></em>
+                    <em class="fa fa-circle fa-stack-2x"></em>
+                    <em class="fa fa-github fa-stack-1x fa-inverse"></em>
                   </span>
                 </a>
               </li>
