--- a/src/app/listthemecomponent/form-theme/form-theme.component.html
+++ b/src/app/listthemecomponent/form-theme/form-theme.component.html
@@ -29,7 +29,7 @@
                         {{formTitle}}
                     </div>
                     <div class="card-body">
-                        <form #form="ngForm" (ngSubmit)="submitTheme(form.value)">
+                        <form #form="ngForm" (ngSubmit)="submitTheme()">
                             <div class="form-group">
                                 <label>Titre</label>
                                 <input class="form-control" type="text" placeholder="Titre" name="titre"
@@ -38,8 +38,9 @@
                             </div>
                             <div class="form-group">
                                 <label>Description</label>
-                                <input class="form-control" type="text" placeholder="Description" name="description"
-                                    [(ngModel)]="Theme.description" required />
+                                <editor apiKey="ll0mhqv3t1oqdtg5mythexok81f4jfbbxgh5kfe12fvn6nek" [init]="{plugins: 'link'}"
+                                    placeholder="Description" name="description"
+                                        [(ngModel)]="Theme.description" required></editor>
                             </div>
                             <div class="form-group">
                                 <label>Moderateur</label>
