--- a/src/app/posts/form-post/form-post.component.html
+++ b/src/app/posts/form-post/form-post.component.html
@@ -41,8 +41,9 @@
                             </div>
                             <div class="form-group">
                                 <label>Message</label>
-                                <textarea class="form-control"  placeholder="Message" name="Message"
-                                    [(ngModel)]="Post.message" required ></textarea>
+                                <editor apiKey="ll0mhqv3t1oqdtg5mythexok81f4jfbbxgh5kfe12fvn6nek"
+                                 [init]="{plugins: 'link'}" placeholder="Message" name="Message"
+                                [(ngModel)]="Post.message" required></editor>
                             </div>
                             
                             
