--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -22,7 +22,7 @@
 </section>
 <div class="container mt-50">
   <div class="row">
-    <div class="col-lg-12 col-md-10 mx-auto">
+    <div class="col-lg-12 col-md-12 mx-auto" >
       <div class="d-flex justify-content-end">
            
         <button class="btn btn-primary" (click) = "NewPost()">
@@ -30,7 +30,7 @@
         </button>
       </div>
       &nbsp;
-      <table class="table  table-striped " *ngIf="posts.length > 0; else elsePosts">
+      <table class="table  table-striped "  *ngIf="posts.length > 0; else elsePosts">
         <caption>Liste des Publications</caption>
         <thead>
           <tr>
@@ -46,8 +46,8 @@
         </tbody>
       </table>
       <ng-template #elsePosts>
-        <table class="table  table-striped table-bordered ">
-          <caption>Liste des Publications</caption>
+        <table class="table  table-striped ">
+          <caption>Liste des Commentaires</caption>
           <thead>
             <tr>
               <th scope="col">Publications</th>
