--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%;}
+html, body { height: 100%;scroll-behavior:smooth;}
 body { margin: 0;  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
 .table{
   border: 1px solid #DEDEDF;
-  
+  border-radius: 3px;
+}
+.table-padding{
+  padding: 20px;
 }
 .btn {
     font-size: 14px;
@@ -13,12 +16,14 @@ body { margin: 0;  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial,
     letter-spacing: 1px;
     border-radius: 0;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #00657b !important;
+    border-color: #00657b !important;
   }
   
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     color: #fff;
-    background-color: #00657b !important;
-    border-color: #00657b !important;
+    background-color: #017b93 !important;
+    border-color: #017b93 !important;
   }
   
   .link{
@@ -37,7 +42,7 @@ body { margin: 0;  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial,
     background: no-repeat center center;
     background-image: url('images/home-bg.jpg') ;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: fixed;
     position: relative;
   }
   
