--- a/src/app/listthemecomponent/form-theme/form-theme.component.html
+++ b/src/app/listthemecomponent/form-theme/form-theme.component.html
@@ -33,7 +33,7 @@
                             <div class="form-group">
                                 <label>Titre</label>
                                 <input class="form-control" type="text" placeholder="Titre" name="titre"
-                                    [(ngModel)]="Theme.titre" required [disabled]="Theme.titre" />
+                                    [(ngModel)]="Theme.titre" required [disabled]="Theme._id" />
 
                             </div>
                             <div class="form-group">
