--- a/src/app/users/login-user/login-user.component.html
+++ b/src/app/users/login-user/login-user.component.html
@@ -1,14 +1,16 @@
 <h1 mat-dialog-title>Formulaire de connexion</h1>
 <div mat-dialog-content>
-  <form #form="ngForm" (ngSubmit)="login(form.value)">
+  <small [hidden] = "!showError" style="color: red;">Email ou Mot de passe incorrect.</small>
+  <form #form="ngForm" (ngSubmit)="login()">
     
+    &nbsp;
     <div class="form-group">
         <label>Email</label>
-        <input class="form-control" type="text" name="user" [(ngModel)]="user.email" required />
+        <input class="form-control" type="text" placeholder="Email" name="user" [(ngModel)]="user.email" required />
     </div>
     <div class="form-group">
         <label>Mot de passe</label>
-        <input class="form-control" type="text" name="password" [(ngModel)]="user.password" required />
+        <input class="form-control" type="password" placeholder="******" name="password" [(ngModel)]="user.password" required />
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="!form.valid" style="float: right;">
         Submit
