--- a/src/app/comments/form-comment/form-comment.component.html
+++ b/src/app/comments/form-comment/form-comment.component.html
@@ -2,13 +2,13 @@
     <div class="form-group">
         <label>Message</label>
         <input class="form-control" type="text" placeholder="Message" name="message"
-            [(ngModel)]="Comment.message" required />
+            [(ngModel)]="Comment.message" required [disabled]="!isAuth" />
 
     </div>
     <div class="form-group">
         <label>Description</label>
         <editor apiKey="ll0mhqv3t1oqdtg5mythexok81f4jfbbxgh5kfe12fvn6nek" [init]="{plugins: 'link'}"
-        placeholder="Description" name="description"
+        placeholder="Description" name="description" [disabled]="!isAuth"
             [(ngModel)]="Comment.description" required></editor>
     </div>
     <div class="d-flex justify-content-end">
