--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                     <hr/>
                     <span class="subheading">Forum de discussion par Excellence</span>
                     <br/>
-                    <div class="d-flex justify-content-center ml-auto ">
+                    <div *ngIf="!isAuth" class="d-flex justify-content-center ml-auto ">
                           <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Contribuer</button>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card">
                         <div class="card-body text-center">
-                            <h1 ><em class="fa fa-home fa-lg"></em></h1>
+                            <h1 ><em class="fa fa-users fa-lg"></em></h1>
                             <h1>Discussion ouvert</h1>
                             <p>
                                 lorem lorem lorem,lorem lorem lorem,
