--- a/src/app/users/login-user/login-user.component.html
+++ b/src/app/users/login-user/login-user.component.html
@@ -13,7 +13,7 @@
         <input class="form-control" type="password" placeholder="******" name="password" [(ngModel)]="user.password" required />
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="!form.valid" style="float: right;">
-        Submit
+        Se connecter
     </button>
 </form>
 </div>
