--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
 p {
     line-height: 1.5;
     margin: 30px 0;
+    text-align: justify;
   }
   
   p a {
@@ -96,7 +97,7 @@ p {
     color: #343a40;
   }
   
-  #mainNav .navbar-nav > li.nav-item > a {
+  #mainNav .navbar-nav > li.nav-item > a ,#mainNav .navbar-nav > li.nav-item > div {
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 1px;
@@ -115,11 +116,12 @@ p {
     #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
       color: rgba(255, 255, 255, 0.8);
     }
-    #mainNav .navbar-nav > li.nav-item > a {
+    #mainNav .navbar-nav > li.nav-item > a,#mainNav .navbar-nav > li.nav-item > div {
       padding: 10px 20px;
       color: #fff;
     }
-    #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover {
+    #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover,
+   #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > div:hover {
       color: rgba(255, 255, 255, 0.8);
     }
   }
@@ -146,10 +148,11 @@ p {
     #mainNav.is-fixed .navbar-brand:focus, #mainNav.is-fixed .navbar-brand:hover {
       color: #0085A1;
     }
-    #mainNav.is-fixed .navbar-nav > li.nav-item > a {
+    #mainNav.is-fixed .navbar-nav > li.nav-item > a, #mainNav.is-fixed .navbar-nav > li.nav-item > div {
       color: #212529;
     }
-    #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav.is-fixed .navbar-nav > li.nav-item > a:hover {
+    #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav.is-fixed .navbar-nav > li.nav-item > a:hover,
+    #mainNav .navbar-nav > li.nav-item > div:focus,#mainNav.is-fixed .navbar-nav > li.nav-item > a:hover {
       color: #0085A1;
     }
     #mainNav.is-visible {
