--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div style="background-color: #F9F7F7;">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container align-items-center">
-      <a class="navbar-brand" routerLink="/accueil" >{{title}}</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <a href="#" class="navbar-brand" routerLink="/accueil">{{title}}</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <em class="fa fa-bars"></em>
       </button>
@@ -11,82 +13,80 @@
           <li class="nav-item">
             <a href="#" routerLink="/accueil" class="nav-link">Accueil</a>
           </li>
+          
           <li class="nav-item">
-            <a href="#" routerLink="/themes" class="nav-link">Themes</a>
+            <a href="#" routerLink="/accueil" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" routerLink="/themes" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" routerLink="/themes" class="nav-link">Contact</a>
+            <a href="#" routerLink="/accueil" class="nav-link">Contact</a>
           </li>
         </ul>
-        
-        <ul *ngIf = "!isAuth; else isAuthSection" class="navbar-nav ml-auto ">
+
+        <ul *ngIf="!isAuth; else isAuthSection" class="navbar-nav ml-auto ">
           <li clas="navbar-item">
-            <button class="btn btn-primary" mat-button (click)="openLoginDialog()" >Se connecter</button>
+            <button class="btn btn-primary" mat-button (click)="openLoginDialog()">Se connecter</button>
           </li>
           &nbsp;
           <li clas="navbar-item">
-            <button class="btn btn-primary" mat-button (click)="openRegisterDialog()" >S'inscrire</button>
+            <button class="btn btn-primary" mat-button (click)="openRegisterDialog()">S'inscrire</button>
           </li>
         </ul>
         <ng-template #isAuthSection>
           <div class="dropdown" style="float:right;">
             <button class="dropbtn">{{Username[0]+""+Username[1]}}</button>
             <div class="dropdown-content">
-              <div (click)="logout()"><em class="fa fa-sign-out" style="color: teal;"></em>&nbsp;Se déconnecter</div>
+              <div (click)="logout()" routerLink="/accueil"><em class="fa fa-sign-out" style="color: teal;"></em>&nbsp;Se déconnecter</div>
             </div>
           </div>
-          
+
         </ng-template>
-        
+
       </div>
     </div>
   </nav>
-  
-  
+
+
   <!-- Main Content -->
-  
+
   <router-outlet></router-outlet>
-  
-  
+
+
   <hr>
-  
-    <!-- Footer -->
-    <footer >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <em class="fa fa-circle fa-stack-2x"></em>
-                    <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <em class="fa fa-circle fa-stack-2x"></em>
-                    <em class="fa fa-facebook-f fa-stack-1x fa-inverse"></em>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <em class="fa fa-circle fa-stack-2x"></em>
-                    <em class="fa fa-github fa-stack-1x fa-inverse"></em>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; E-Forum {{currentYear}}</p>
-          </div>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fa fa-circle fa-stack-2x"></em>
+                  <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fa fa-circle fa-stack-2x"></em>
+                  <em class="fa fa-facebook-f fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <em class="fa fa-circle fa-stack-2x"></em>
+                  <em class="fa fa-github fa-stack-1x fa-inverse"></em>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright text-muted">Copyright &copy; E-Forum {{currentYear}}</p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 </div>
