--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,6 +60,27 @@
                     </div>
                 </div>
             </div>
+
+            
+        </div>
+
+    </div>
+
+</div>
+&nbsp;
+<div class="container mt-30 ">
+    <div class="row">
+        <div class="col-lg-12 col-md-10 mx-auto">
+            <h1 class="d-flex justify-content-center title">Forums</h1>
+            
+            <div *ngIf="isAdmin == 'true'; else notAdmin">
+                <app-forums></app-forums>
+            </div>
+            <ng-template #notAdmin>
+                <app-forums-user></app-forums-user>
+            </ng-template>
+
+            
         </div>
 
     </div>
