--- a/src/app/listthemecomponent/listthemecomponent.component.html
+++ b/src/app/listthemecomponent/listthemecomponent.component.html
@@ -7,7 +7,7 @@
         <div class="site-heading">
           <h1>THEMES</h1>
           <hr />
-          <span class="subheading">Liste des thèmes</span>
+          <small class="subheading">Liste des thèmes</small>
         </div>
       </div>
     </div>
@@ -23,12 +23,12 @@
     <div class="col-lg-12 col-md-10 mx-auto">
           <div class="d-flex justify-content-end">
            
-            <button class="btn btn-primary" routerLink="/addTheme">
+            <button class="btn btn-primary" (click)="addTheme()" >
               + Nouveau Thème
             </button>
           </div>
           &nbsp;
-            <table  class="table  table-striped  tables" *ngIf="Themes; else elseThemes">
+            <table  class="table  table-striped  tables" *ngIf="Themes.length>0; else elseThemes">
               <caption>Liste des Thémes</caption>
               <thead>
                 <tr>
