--- a/src/app/users/register-user/register-user.component.html
+++ b/src/app/users/register-user/register-user.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <small [hidden] = "!showError" style="color: red;">L'e-mail que vous avez choisi existe déjà !</small>
     
-  <form #RegisterRorm="ngForm" (ngSubmit)="register(RegisterRorm.value)">
+  <form #RegisterRorm="ngForm" (ngSubmit)="register()">
     &nbsp;
     <div class="form-group">
         <label>Nom</label>
