--- a/src/app/listthemecomponent/form-theme/form-theme.component.html
+++ b/src/app/listthemecomponent/form-theme/form-theme.component.html
@@ -43,7 +43,7 @@
                                         [(ngModel)]="Theme.description" required></editor>
                             </div>
                             <div class="form-group">
-                                <label>Moderateur</label>
+                                <label>Modérateur</label>
                                 <select class="form-control" name="moderateur"
                                     [(ngModel)]="Theme.moderateur" required>
                                     <option value=""  disabled selected>Choisir un modérateur</option>
