--- a/src/app/posts-user/posts-user.component.html
+++ b/src/app/posts-user/posts-user.component.html
@@ -41,7 +41,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let p of posts; let i = index" app-post [post]="p">
+            <tr *ngFor="let p of posts; let i = index" app-post-user [post]="p">
             </tr>
           </tbody>
         </table>
