--- a/src/app/listthemecomponent/listthemecomponent.component.html
+++ b/src/app/listthemecomponent/listthemecomponent.component.html
@@ -14,60 +14,63 @@
   </div>
 </section>
 <section class="container d-flex align-items-center">
-  <div class="path" (click) = "goHome()"><em class="fa fa-home"></em>&nbsp;Accueil</div>&nbsp;
+  <div class="path" (click)="goHome()"><em class="fa fa-home"></em>&nbsp;Accueil</div>&nbsp;
   <em class="fa fa-angle-right"></em>&nbsp;
   <div>Thèmes</div>
 </section>
 <div class="container mt-10">
   <div class="row">
     <div class="col-lg-12 col-md-10 mx-auto">
-          <div class="d-flex justify-content-end">
-           
-            <button class="btn btn-primary" (click)="addTheme()" >
-              + Nouveau Thème
-            </button>
-          </div>
-          &nbsp;
-            <table  class="table  table-striped  tables" *ngIf="Themes.length>0; else elseThemes">
-              <caption>Liste des Thémes</caption>
-              <thead>
-                <tr>
-                  <th scope="col">Thème</th>
-                  <th scope="col">Modérateur</th>
-                  <th scope="col">Total des publications</th>
-                  <th scope="col">Actions</th>
-                </tr>
-              </thead>
-              <tbody class="theme-preview">
-                <tr *ngFor="let t of Themes; let i = index" app-theme [Theme]="t">
-                </tr>
-              </tbody>
-            </table>
-            <ng-template #elseThemes>
-              <table class="table  table-striped ">
-                <caption>Liste des Thémes</caption>
-                <thead>
-                  <tr>
-                    <th scope="col">Thème</th>
-                    <th scope="col">Modérateur</th>
-                    <th scope="col">Total des publications</th>
-                    <th scope="col">Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr >
-                    <td colspan="4">
-                      <h2 class="container  d-flex justify-content-center">
-                        Aucun résultat
-                      </h2>
-                    </td>
-  
-                  </tr>
-                </tbody>
-              </table>
-  
-            </ng-template>
-          
+      <div class="d-flex justify-content-end">
+
+        <button class="btn btn-primary" (click)="addTheme()">
+          + Nouveau Thème
+        </button>
+      </div>
+      &nbsp;
+      <div class="table-responsive">
+        <table class="table  table-striped  tables" *ngIf="Themes.length>0; else elseThemes">
+          <caption>Liste des Thémes</caption>
+          <thead>
+            <tr>
+              <th scope="col">Thème</th>
+              <th scope="col">Modérateur</th>
+              <th scope="col">Total des publications</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody class="theme-preview">
+            <tr *ngFor="let t of Themes; let i = index" app-theme [Theme]="t">
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <ng-template #elseThemes>
+        <div class="table-responsive">
+          <table class="table  table-striped ">
+            <caption>Liste des Thémes</caption>
+            <thead>
+              <tr>
+                <th scope="col">Thème</th>
+                <th scope="col">Modérateur</th>
+                <th scope="col">Total des publications</th>
+                <th scope="col">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="4">
+                  <h2 class="container  d-flex justify-content-center">
+                    Aucun résultat
+                  </h2>
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </ng-template>
+
 
     </div>
   </div>
