--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -22,26 +22,10 @@
 </section>
 <div class="container mt-50">
   <div class="row">
-    <div class="col-lg-12 col-md-12 mx-auto" >
-      
-      <table class="table  table-striped "  *ngIf="posts.length > 0; else elsePosts">
-        <caption>Liste des Publications</caption>
-        <thead>
-          <tr>
-            <th scope="col">Publications</th>
-            <th scope="col">Réponses</th>
-            <th scope="col">Auteur</th>
-
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let p of posts; let i = index" app-post [post]="p">
-          </tr>
-        </tbody>
-      </table>
-      <ng-template #elsePosts>
-        <table class="table  table-striped ">
-          <caption>Liste des Commentaires</caption>
+    <div class="col-lg-12 col-md-12 mx-auto">
+      <div class="table-responsive">
+        <table class="table  table-striped " *ngIf="posts.length > 0; else elsePosts">
+          <caption>Liste des Publications</caption>
           <thead>
             <tr>
               <th scope="col">Publications</th>
@@ -51,16 +35,34 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td colspan="3">
-                <h2 class="container  d-flex justify-content-center">
-                  Aucun résultat
-                </h2>
-              </td>
+            <tr *ngFor="let p of posts; let i = index" app-post [post]="p">
             </tr>
           </tbody>
         </table>
+      </div>
+      <ng-template #elsePosts>
+        <div class="table-responsive">
+          <table class="table  table-striped ">
+            <caption>Liste des Commentaires</caption>
+            <thead>
+              <tr>
+                <th scope="col">Publications</th>
+                <th scope="col">Réponses</th>
+                <th scope="col">Auteur</th>
 
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">
+                  <h2 class="container  d-flex justify-content-center">
+                    Aucun résultat
+                  </h2>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </ng-template>
     </div>
   </div>
