--- a/src/app/themes-user/themes-user.component.html
+++ b/src/app/themes-user/themes-user.component.html
@@ -29,6 +29,7 @@
               <th scope="col">Thème</th>
               <th scope="col">Modérateur</th>
               <th scope="col">Total des publications</th>
+              <th scope="col">Actions</th>
             </tr>
           </thead>
           <tbody class="theme-preview">
@@ -47,11 +48,12 @@
                 <th scope="col">Thème</th>
                 <th scope="col">Modérateur</th>
                 <th scope="col">Total des publications</th>
+                <th scope="col">Actions</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td colspan="3">
+                <td colspan="4">
                   <h2 class="container  d-flex justify-content-center">
                     Aucun résultat
                   </h2>
